# vibe_code

./: .env.sops  .envrc  .gitignore  .sops.yaml  CLAUDE.md  decrypt-secrets.sh  requirements.txt  session_log.md  sops_setup_doc.md  streamlit_app.py
data/: analytics.duckdb
dbt_project/: .user.yml  profiles.yml
dbt_project/models/staging/: stg_riders.sql
zwift_scout/: pyproject.toml  zr_club_pipeline.py  zr_riders_pipeline.py
zwift_scout/data/: analytics.duckdb
zwift_scout/dbt_project/: dbt_project.yml
zwift_scout/dbt_project/models/core/: riders.sql
